changed project name

--- a/model/SystemC_TWT_URO/3.13_Speed_and_distance_monitoring/.project
+++ b/model/SystemC_TWT_URO/3.13_Speed_and_distance_monitoring/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ETCS_Bremskurven</name>
+	<name>3.13_Speed_Distance_Monitoring</name>
 	<comment></comment>
 	<projects>
 	</projects>
