--- a/model/SystemC_TWT_URO/3.5_Radio_Communication/model/CMakeLists.txt
+++ b/model/SystemC_TWT_URO/3.5_Radio_Communication/model/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required (VERSION 2.6)
 project (Testproject)
 
 
+SET(CMAKE_C_COMPILER  gcc-4.7)
+SET(CMAKE_CXX_COMPILER  g++-4.7)
+
 ADD_DEFINITIONS(-std=c++11 -g3 -Wl,-rpath=$SYSTEMC_HOME/lib-linux64)
 
 include_directories ($ENV{SYSTEMC_HOME}/include)
